--- a/SystemsSoftwareCoursework/nbproject/private/private.properties
+++ b/SystemsSoftwareCoursework/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Bradley Evans\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Tanak\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
