--- a/SystemsSoftwareCoursework/nbproject/private/private.properties
+++ b/SystemsSoftwareCoursework/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Tanak\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mysql-connector-java-5.1.45-bin.jar=C:\\Users\\Bradley Evans\\Desktop\\Java Coursework\\mysql-connector-java-5.1.45\\mysql-connector-java-5.1.45-bin.jar
+user.properties.file=C:\\Users\\Bradley Evans\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
