--- a/SystemsSoftwareCoursework/nbproject/project.properties
+++ b/SystemsSoftwareCoursework/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/SystemsSoftwareCoursework.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.45-bin.jar=C:\\Users\\Tanak\\OneDrive\\Documents\\mysql-connector-java-5.1.45\\mysql-connector-java-5.1.45-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.45-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
